syntax = "proto3";

package pb;

// 根据文档定义常量
enum TaskType {
    Ignore = 0;
    TaskStore = 1;
    TaskDelay = 2;
    TaskReady = 3;
    TaskReserved = 4;
    TaskFinished = 5;
    TaskRetryDelay = 6;
    TaskCheck = 7;
}